<resources>
    <string name="app_name">CovidTracker</string>
    <string name="date">Date</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="confirmed_increase">Confirmed Increase</string>
    <string name="confirmed">Confirmed</string>
    <string name="death_increase">Death Increase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>