<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    android:layout_marginTop="2dp"
    android:background="@color/black">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/spaceGray"
            android:layout_marginHorizontal="1dp"
            android:layout_marginTop="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="0"/>
            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2020/07/20"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_column="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_column="2"/>
            <TextView
                android:id="@+id/item_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1,000,000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/spaceGray"
            android:layout_margin="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="0"/>
            <TextView
                android:id="@+id/item_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1,000,000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_column="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/death_increase"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="2"/>
            <TextView
                android:id="@+id/item_death2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1,000,000"
                android:textColor="#CB4335"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/spaceGray"
            android:layout_marginBottom="1dp"
            android:layout_marginHorizontal="1dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="0"/>
            <TextView
                android:id="@+id/item_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1,000,000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginEnd="30dp"
                android:layout_column="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_increase"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="2"/>
            <TextView
                android:id="@+id/item_positive2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="1,000,000"
                android:textColor="#380375"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_column="3"/>
        </TableRow>
    </TableLayout>
</LinearLayout>